# Apriltag_python

./: .gitignore  LICENSE  README.md  TagDetection.py  apriltag.py  apriltagpython.py  camtest.py  multCamDet.py  multcamdet.py  pyproject.toml  run_detection.py  tagDetection.py  tagFamilies.py  tagUtils.py  tagVisual.py  tag_tuding.py  tagfamilies.py  tagvisual.py  test.py  test4.py  testMulPic.py  testMulPicso.py  testcam.py  testmyapriltag.py  testso.py  vispypoint.py  vispytest.py
apriltag_python/: __init__.py  apriltag.py  tagDetection.py  tagFamilies.py  tagUtils.py  tagVisual.py
apriltag_python/tag_families/: tag16h5.xml  tag25h9.xml  tag36h11.xml
camtest/: README.md  multCamDet.py  test4.py  testMulPic.py  testMulPicso.py  testcam.py  vispytest.py
picture2/: desktop.ini
tests/: test_apriltag.py  test_detection.py
